2006-06-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, src/config.h.in: Update to include
	snprintf prototype in all files -- increased use with changing
	sprintf calls to snprintf to minimize buffer overflows.

	* src/math/*: Remove calls to exit(!) on faulty input -- return
	errors and default values.

	* src/formats/*format.cpp (more files): Remove calls to sprintf,
	sscanf, strcpy.

	* test/*.sh: Protect against existing environment variables when
	re-defining. For test calls, we need to ensure only our binaries
	load.

2006-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp (OBElementTable::ParseLine): Change sscanf call to
	use fixed length (256 chars) for name string, rather than
	preprocessor #define BUFF_SIZE.

	* src/formats/xml/xml.cpp, src/formats/xml/xml.h, 
	src/formats/*format.cpp: Remove calls to sprintf, sscanf, strcpy.

	* scripts/*: Regenerate to add Craig's UnsetHash() and
	UnsetWedge() calls.

2006-05-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xml/xml.cpp (ReadXML): Fix PR#1486678 for
	multi-molecule files. The libxml2 library is very unhappy reading
	a file past EOF, so make sure to check the state of the istream
	before reading.

	* test/cmltest/*: Renamed roundtrip.sh script, which
	was a confusing name, to cycleformats.sh.

	* src/formats/pdbformat.cpp: Run PerceiveBondOrders regardless of
	size (most PDB multiple-bonds should be picked up by residue
	information). Fixes PR#1493626.

2006-05-30 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/smilesformat.cpp (ParseSimple): Tidied up code
	to handle extension lc as conjugated double bonds and radical.
	Defer potential double bonds to end of ParseSmiles() when molecule
	complete to ensure not applied to aromatic atoms. PR#1493148
	still ok and extension works again.
	
2006-05-26  Craig James <cjames@emolecules.com>

	* src/mol.h Added UnsetHash() and UnsetWedge() macros.
	