@@ -326,40 +326,40 @@ Write Options, e.g. -x3\n \
         mol.SetData(cd);
       }
         
-    //Get property lines
-    while (ifs.getline(buffer,BUFF_SIZE)) {
-      if (strstr(buffer,"<")) {
-        string buff(buffer);
-        size_t lt=buff.find("<")+1;
-        size_t rt = buff.find_last_of(">");
-        string attr = buff.substr(lt,rt-lt);
+  //Get property lines
+  while (ifs.getline(buffer,BUFF_SIZE))
+  {
+    if (strstr(buffer,"<"))
+    {
+      string buff(buffer);
+      size_t lt=buff.find("<")+1;
+      size_t rt = buff.find_last_of(">");
+      string attr = buff.substr(lt,rt-lt);
 
-        // sometimes we can hit more data than BUFF_SIZE, so we'll use a std::string
-        // sometimes we can hit more data than BUFF_SIZE, so we'll use a std::string
-        string line;
-        buff.clear();
-        while (getline(ifs, line))
-          {
-            if (line.size())
-              {
-                buff.append(line);
-                buff += "\n";
-              }
-            else
-              break;
-          }
-        Trim(buff);
-
-        OBPairData *dp = new OBPairData;
-        dp->SetAttribute(attr);
-        dp->SetValue(buff);
-        mol.SetData(dp);
+      // sometimes we can hit more data than BUFF_SIZE, so we'll use a std::string
+      string line;
+      buff.clear();
+      while (getline(ifs, line))
+      {
+        Trim(line);
+        if (line.size())
+        {
+          buff.append(line);
+          buff += "\n";
+        }
+        else
+          break;
       }
-      // end RWT    
+      Trim(buff);
 
-      if (!strncmp(buffer,"$$$$",4)) break;
-      if (!strncmp(buffer,"$MOL",4)) break;
+      OBPairData *dp = new OBPairData;
+      dp->SetAttribute(attr);
+      dp->SetValue(buff);
+      mol.SetData(dp);
     }
+    if (!strncmp(buffer,"$$$$",4)) break;
+    if (!strncmp(buffer,"$MOL",4)) break;
+  }
 
     return(true);
 
